# coursera-machine-learning-introduction

./: .gitignore  pyproject.toml  readme.md
c1/: readme.md
c1/w2/assignment/: C1_W2_Linear_Regression.ipynb
c1/w3/assignment/: C1_W3_Logistic_Regression.ipynb
c2/certificate/: readme.md
c2/w1/assignment/: C2_W1_Assignment.ipynb
c2/w1/lab/: C2_W1_Lab01_Neurons_and_Layers.ipynb  C2_W1_Lab02_CoffeeRoasting_TF.ipynb  C2_W1_Lab03_CoffeeRoasting_Numpy.ipynb
c2/w2/assignment/: C2_W2_Assignment.ipynb
c2/w2/lab/: C2_W2_Relu.ipynb
c2/w3/assignment/: C2_W3_Assignment.ipynb
c2/w4/assignment/: C2_W4_Decision_Tree_with_Markdown.ipynb
c3/: readme.md
c3/w1/assignment_1/: C3_W1_KMeans_Assignment.ipynb
c3/w1/assignment_2/: C3_W1_Anomaly_Detection.ipynb
c3/w2/assignment_1/: C3_W2_Collaborative_RecSys_Assignment.ipynb
c3/w2/assignment_2/: C3_W2_RecSysNN_Assignment.ipynb  recsysNN_utils.py
c3/w3/assignment/: C3_W3_A1_Assignment.ipynb  lunar_lander_model.h5
c3/w3/labs/: State-action value function example.ipynb
