[tool.poetry]
name = "coursera-machine-learning-introduction"
version = "0.1.0"
description = ""
authors = ["JChien <jeffchien13@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow-macos = "^2.9.2"
tensorflow-metal = "^0.5.0"
ipykernel = "^6.15.1"
matplotlib = "^3.5.2"
ipywidgets = "^7.7.1"
numpy = "^1.23.1"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
